ensure table has optimum space on mobile

--- a/app/src/components/allStatusTable/index.css
+++ b/app/src/components/allStatusTable/index.css
@@ -5,6 +5,6 @@
 
 @media screen and (max-width: 784px) {
   .table__section {
-    margin: 5rem 0rem;
+    margin: 5rem -3rem;
   }
 }
